fix(routing): prevent navbar flickering during auth check
add dashboard button for guide/admin roles in user profile
skip auth check for public routes to improve performance

--- a/src/components/Profile/UserProfile.css
+++ b/src/components/Profile/UserProfile.css
@@ -7,7 +7,8 @@
 
 .profile-header {
   text-align: center;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
+  position: relative;
 }
 
 .profile-header h1 {
@@ -374,4 +375,31 @@
     text-decoration: none;
   
 }
-
+.dashboard_button {
+    position: relative  ;
+    display: inline-block;
+    background-color: #656565;
+    color: #ffffff;
+    border: 2px solid #afa375;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    border-radius: 30px;
+    transition: all 0.3s ease;
+    align-items: center;
+    gap: 8px;
+    overflow: hidden;
+    z-index: 1;
+    margin-left: 20px;
+    text-decoration: none;
+    cursor: pointer;
+  
+}
+.dashboard-btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
